# axiomath-rs

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md
axiomath/: Cargo.toml
axiomath/src/: lib.rs  prelude.rs
axiomath/src/calculus/: differentiation.rs  mod.rs
axiomath/src/calculus/integration/: adaptive.rs  gaussian.rs  mod.rs  newton_cotes.rs
axiomath/src/calculus/ode/: adaptive_rk.rs  euler.rs  mod.rs  rk4.rs
axiomath/src/complex/: mod.rs
axiomath/src/core/: constants.rs  mod.rs  traits.rs
axiomath/src/geometry/: mod.rs
axiomath/src/geometry/primitives/: line.rs  mod.rs  plane.rs  triangle.rs
axiomath/src/geometry/quaternion/: mod.rs  operations.rs  slerp.rs
axiomath/src/geometry/transform/: homogeneous.rs  mod.rs  transform_2d.rs  transform_3d.rs
axiomath/src/linear_algebra/: mod.rs  row_operations.rs  rref.rs
axiomath/src/linear_algebra/decomposition/: cholesky.rs  eigen.rs  lu.rs  mod.rs  qr.rs  svd.rs
axiomath/src/linear_algebra/spaces/: basis.rs  mod.rs  subspaces.rs
axiomath/src/linear_algebra/systems/: direct.rs  inverse.rs  iterative.rs  mod.rs  triangular.rs
axiomath/src/matrix/: arithmetic.rs  constructors.rs  matrix_type.rs  mod.rs  multiplication.rs  properties.rs  transpose.rs
axiomath/src/number_theory/: combinatorics.rs  divisibility.rs  mod.rs  modular.rs  primality.rs
axiomath/src/optimization/: mod.rs
axiomath/src/polynomial/: mod.rs
axiomath/src/scalar/: exponential.rs  hyperbolic.rs  logarithmic.rs  mod.rs  power.rs  rounding.rs  trigonometric.rs
axiomath/src/special/: beta.rs  error_function.rs  gamma.rs  mod.rs
axiomath/src/statistics/: descriptive.rs  inference.rs  information.rs  mod.rs
axiomath/src/statistics/distributions/: continuous.rs  discrete.rs  mod.rs
axiomath/src/thermodynamics/: mod.rs
axiomath/src/utils/: comparison.rs  mod.rs
axiomath/src/vector/: angles.rs  arithmetic.rs  mod.rs  norms.rs  products.rs  projections.rs  scalar_ops.rs  vector_type.rs
