[package]
name = "axiomath"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "A comprehensive first-principle mathematics library for Rust with support for thermodynamic statistics"
readme = "../README.md"

[dependencies]
num-traits = { workspace = true }
libm = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
rayon = { workspace = true, optional = true }
rand = { workspace = true, optional = true }

[dev-dependencies]
approx = { workspace = true }
proptest = { workspace = true }
quickcheck = { workspace = true }
criterion = { workspace = true }

[features]
default = ["std"]
std = ["num-traits/std"]
libm = ["dep:libm"]
serde = ["dep:serde"]
parallel = ["dep:rayon"]
random = ["dep:rand"]

# Simd support (requires nightly for now)
simd = []

[lib]
name = "axiomath"
path = "src/lib.rs"

# Benchmarks will be added later
# [[bench]]
# name = "scalar_ops"
# harness = false
